test/compile_errors/err_recovery_extra_comma.w
//! expect-error: expected

fn greet(name: str, , age: i32):
    print(name)

fn main:
    greet("hi", 5)
